--- a/Nhóm 13/index.html
+++ b/Nhóm 13/index.html
@@ -191,14 +191,14 @@
                     <img src="assets/images/son.jpg" alt="">
                     <div class = 'item_content'>
                         <h2 class = "pacifico">Lê Hồng Sơn</h2>
-                        <a href="lehongson/CV LHS.html" target ="_blank" class = "btn Roboto">GO CV</a>
+                        <a href="lehongson/index.html" target ="_blank" class = "btn Roboto">GO CV</a>
                     </div>
                 </div>
                 <div class  = "item item4">
                     <img src="assets/images/quan.jpg" alt="">
                     <div class = 'item_content'>
                         <h2 class = "pacifico">Trần Hồng Quân</h2>
-                        <a href="tranhongquan/CV.html"  target ="_blank" class = "btn Roboto">GO CV</a>
+                        <a href="tranhongquan/index.html"  target ="_blank" class = "btn Roboto">GO CV</a>
                     </div>
                 </div>
             </div>
